--- a/View.html
+++ b/View.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>挑夹棋</title>
-    <link rel="stylesheet" type="text/css" href="css/Board.css">
+    <link rel="stylesheet" type="text/css" href="Board.css">
 </head>
 <body>
 
@@ -62,6 +62,6 @@
         5. Game won't be over unless you begin a new game.<br>
     </div>
 </div>
-<script src="js/Logic.js"></script>
+<script src="Logic.js"></script>
 </body>
 </html>
